k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  labels:
    app: wisecow

spec:
  replicas: 2

  selector:
    matchLabels:
      app: wisecow

  template:
    metadata:
      labels:
        app: wisecow

    spec:
      containers:
        - name: wisecow
          image: 6380575356/wisecow:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 4499
              protocol: TCP

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
