k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service

spec:
  type: ClusterIP

  selector:
    app: wisecow

  ports:
    - name: http
      protocol: TCP
      port: 4499
      targetPort: 4499
